Fixed SVG overlap

--- a/style.scss
+++ b/style.scss
@@ -407,6 +407,7 @@ $gutter: 20px;
 	.project {
 
 		position: relative;
+		overflow: hidden;
 
 		a {
 			display: block;
